--- a/src/Pages/Pages.Principal.fmx
+++ b/src/Pages/Pages.Principal.fmx
@@ -72,22 +72,6 @@ object PagePrincipal: TPagePrincipal
             Trigger = 'IsMouseOver=true'
             TriggerInverse = 'IsMouseOver=false'
           end
-          object lblBtnVoltar: TLabel
-            Align = HorzCenter
-            AutoSize = True
-            StyledSettings = []
-            Position.X = 35.000000000000000000
-            Size.Width = 43.000000000000000000
-            Size.Height = 58.000000000000000000
-            Size.PlatformDefault = False
-            TextSettings.Font.Family = 'Fira Code Retina'
-            TextSettings.Font.Size = 18.000000000000000000
-            TextSettings.Font.StyleExt = {00070000000000000004000000}
-            TextSettings.FontColor = claSnow
-            TextSettings.HorzAlign = Center
-            Text = '<--'
-            TabOrder = 0
-          end
           object ColorAnimation3: TColorAnimation
             Duration = 0.200000002980232200
             PropertyName = 'Stroke.Color'
@@ -105,6 +89,31 @@ object PagePrincipal: TPagePrincipal
             StopValue = 1.100000023841858000
             Trigger = 'IsMouseOver=true'
             TriggerInverse = 'IsMouseOver=false'
+          end
+          object iconVoltar: TPath
+            Align = VertCenter
+            Data.Path = {
+              1B00000000000000000088410000004101000000A47079415C8F164101000000
+              295C894100003041010000000000104100003041010000000000104100005041
+              01000000295C89410000504101000000A4707941AE4769410100000000008841
+              00008041010000000000A8410000404101000000000088410000004103000000
+              0000884100000041000000000000A0400000A04001000000000040410000A040
+              010000000000404100004040010000000000A04000004040020000009A997940
+              0000404002000000000040409A99794002000000000040400000A04001000000
+              00004040000098410200000000004040CDCCA041020000009A9979400000A841
+              020000000000A0400000A84101000000000040410000A8410100000000004041
+              00009841010000000000A04000009841010000000000A0400000A04003000000
+              0000A0400000A040}
+            EnableDragHighlight = False
+            Fill.Color = xB4FFFFFF
+            HitTest = False
+            Position.Y = 10.000000000000000000
+            RotationAngle = 180.000000000000000000
+            Size.Width = 113.000000000000000000
+            Size.Height = 37.000000000000000000
+            Size.PlatformDefault = False
+            Stroke.Kind = None
+            WrapMode = Fit
           end
         end
       end
