--- a/src/Pages/Pages.Update.fmx
+++ b/src/Pages/Pages.Update.fmx
@@ -952,21 +952,6 @@ object PageUpdate: TPageUpdate
           Trigger = 'IsMouseOver=true'
           TriggerInverse = 'IsMouseOver=false'
         end
-        object lblBtnVoltar: TLabel
-          Align = HorzCenter
-          AutoSize = True
-          StyledSettings = []
-          Size.Width = 90.000000000000000000
-          Size.Height = 57.000000000000000000
-          Size.PlatformDefault = False
-          TextSettings.Font.Family = 'Fira Code Retina'
-          TextSettings.Font.Size = 18.000000000000000000
-          TextSettings.Font.StyleExt = {00070000000000000004000000}
-          TextSettings.FontColor = xFF202225
-          TextSettings.HorzAlign = Center
-          Text = '<--'
-          TabOrder = 0
-        end
         object ColorAnimation3: TColorAnimation
           Duration = 0.200000002980232200
           PropertyName = 'Stroke.Color'
@@ -985,6 +970,24 @@ object PageUpdate: TPageUpdate
           Trigger = 'IsMouseOver=true'
           TriggerInverse = 'IsMouseOver=false'
         end
+        object iconVoltar: TPath
+          Align = VertCenter
+          Data.Path = {
+            0B000000000000000000A04100003041010000005C8FFA400000304101000000
+            52B85641B81EAD40010000000000404100008040010000000000804000004041
+            01000000000040410000A041010000005C8F564152B89441010000005C8FFA40
+            00005041010000000000A04100005041010000000000A0410000304103000000
+            0000A04100003041}
+          EnableDragHighlight = False
+          Fill.Color = xB4000000
+          HitTest = False
+          Position.Y = 13.000000000000000000
+          Size.Width = 90.000000000000000000
+          Size.Height = 31.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Kind = None
+          WrapMode = Fit
+        end
       end
       object btnPrint: TRectangle
         Align = Scale
@@ -993,7 +996,7 @@ object PageUpdate: TPageUpdate
         Margins.Top = 3.000000000000000000
         Margins.Right = 3.000000000000000000
         Margins.Bottom = 3.000000000000000000
-        Position.X = 105.000000000000000000
+        Position.X = 113.000000000000000000
         Position.Y = 3.000000000000000000
         Size.Width = 90.000000000000000000
         Size.Height = 57.000000000000000000
