--- a/src/Pages/Pages.Update.fmx
+++ b/src/Pages/Pages.Update.fmx
@@ -902,24 +902,100 @@ object PageUpdate: TPageUpdate
       Size.PlatformDefault = False
       TabOrder = 9
       object lblID: TLabel
-        Align = MostRight
+        Align = Right
         StyledSettings = [Family, FontColor]
-        Position.X = 772.000000000000000000
-        Size.Width = 90.000000000000000000
+        Position.X = 712.000000000000000000
+        Size.Width = 150.000000000000000000
         Size.Height = 63.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 14.000000000000000000
         TextSettings.Font.StyleExt = {00070000000000000004000000}
         Text = 'ID'
         TabOrder = 1
+        object btnCopy: TRectangle
+          Align = Right
+          Cursor = crHandPoint
+          Fill.Color = claNull
+          Margins.Left = 9.000000000000000000
+          Margins.Top = 16.000000000000000000
+          Margins.Right = 9.000000000000000000
+          Margins.Bottom = 16.000000000000000000
+          Position.X = 112.000000000000000000
+          Position.Y = 16.000000000000000000
+          Size.Width = 29.000000000000000000
+          Size.Height = 31.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Color = claNull
+          XRadius = 5.000000000000000000
+          YRadius = 5.000000000000000000
+          OnClick = btnCopyClick
+          object ColorAnimation7: TColorAnimation
+            Duration = 0.200000002980232200
+            PropertyName = 'Fill.Color'
+            StartValue = claNull
+            StopValue = x1E36393F
+            Trigger = 'IsMouseOver=true'
+            TriggerInverse = 'IsMouseOver=false'
+          end
+          object ColorAnimation8: TColorAnimation
+            Duration = 0.200000002980232200
+            PropertyName = 'Stroke.Color'
+            StartValue = claNull
+            StopValue = x5A36393F
+            Trigger = 'IsMouseOver=true'
+            TriggerInverse = 'IsMouseOver=false'
+          end
+          object FloatAnimation1: TFloatAnimation
+            AnimationType = InOut
+            Duration = 0.200000002980232200
+            Interpolation = Bounce
+            PropertyName = 'Scale.X'
+            StartValue = 1.000000000000000000
+            StopValue = 1.049999952316284000
+            Trigger = 'IsMouseOver=true'
+            TriggerInverse = 'IsMouseOver=false'
+          end
+          object iconCopy: TPath
+            Align = Center
+            Cursor = crHandPoint
+            Data.Path = {
+              2F00000000000000000070410000A041010000000000A0400000A04101000000
+              0000A0400000E040020000000000A0406666CE40020000009A9991400000C040
+              02000000000080400000C04001000000000080400000C04002000000CDCC5C40
+              0000C04002000000000040406666CE4002000000000040400000E04001000000
+              000040400000A0410200000000004040CDCCA841020000009A9979400000B041
+              020000000000A0400000B04101000000000070410000B04102000000CDCC7841
+              0000B04102000000000080416666AC4102000000000080410000A84101000000
+              000080410000A84102000000000080419A99A34102000000CDCC78410000A041
+              02000000000070410000A04103000000000070410000A041000000000000A041
+              00008041010000000000A04100008040020000000000A0419A99394002000000
+              CDCC984100000040020000000000904100000040010000000000104100000040
+              02000000CDCCFC4000000040020000000000E0409A993940020000000000E040
+              00008040010000000000E04000008041020000000000E040CDCC884102000000
+              CDCCFC4000009041020000000000104100009041010000000000904100009041
+              02000000CDCC984100009041020000000000A041CDCC8841020000000000A041
+              00008041030000000000A0410000804100000000000090410000804101000000
+              0000104100008041010000000000104100008040010000000000904100008040
+              010000000000904100008041030000000000904100008041}
+            EnableDragHighlight = False
+            Fill.Color = xB4000000
+            HitTest = False
+            Margins.Top = 3.000000000000000000
+            Size.Width = 27.000000000000000000
+            Size.Height = 30.000000000000000000
+            Size.PlatformDefault = False
+            Stroke.Color = claDimgray
+            WrapMode = Original
+          end
+        end
       end
       object lblTitle: TLabel
         Align = VertCenter
         AutoSize = True
         StyledSettings = [FontColor]
-        Position.X = 96.000000000000000000
+        Position.X = 198.000000000000000000
         Position.Y = 21.000000000000000000
-        Size.Width = 676.000000000000000000
+        Size.Width = 514.000000000000000000
         Size.Height = 20.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Family = 'Fira Code Retina'
@@ -990,13 +1066,13 @@ object PageUpdate: TPageUpdate
         end
       end
       object btnPrint: TRectangle
-        Align = Scale
+        Align = Left
         Fill.Color = x643BA55D
-        Margins.Left = 3.000000000000000000
+        Margins.Left = 9.000000000000000000
         Margins.Top = 3.000000000000000000
         Margins.Right = 3.000000000000000000
         Margins.Bottom = 3.000000000000000000
-        Position.X = 113.000000000000000000
+        Position.X = 105.000000000000000000
         Position.Y = 3.000000000000000000
         Size.Width = 90.000000000000000000
         Size.Height = 57.000000000000000000
